<resources>
    <string name="app_name">FamilyTracker</string>

    <string name="hello_world">Hello world!</string>

    <string name="Log">Log</string>
    <string name="WelcomeUser">Welcome User!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fthome_page">FTHomePageActivity</string>
    <string name="title_activity_ftlog">FTLogActivity</string>
    <string name="title_activity_ftfamily_member">FTFamilyMemberActivity</string>
    <string name="title_activity_ftfamily_locations">FTFamilyLocationsActivity</string>
    <string name="title_activity_ftlocation">FTLocationActivity</string>
    <string name="title_activity_ftfamily">FTFamilyActivity</string>

    <!-- Parse related -->
    <string name="parse_app_id">C30gJfwJvCVWoul6oo6hXRsvqQBNQlhT9VO4Rkkx</string>
    <string name="parse_client_key">BGVqaeZnOHVrhdAJWjkIs6r2TWATsvBeJKCuNqf5</string>


    <!-- Home page activity -->
    <string name="Myfamilies">Families</string>


    <!-- Location Activity -->
    <string name="address_text">Address</string>
    <string name="followers_text">Followers</string>
    <string name="location_name_text">Name:</string>
    <string name="location_addr_text">Addr:</string>
    <string name="ok_button_text">OK</string>
    <string name="location_header">Location</string>

    <!-- Family member activity -->
    <string name="Activity_Header_Content_Create_Member">Input Member Data</string>
    <string name="Name_Label_Content">Name</string>
    <string name="Phone_Label_Content">Phone Number</string>
    <string name="Email_Label_Content">Email Address</string>
    <string name="Edit_Mode_Header">edit member data</string>
    <string name="Extras_Key_Is_Edit_Mode">IsEditMode</string>
    <string name="Extras_Key_Current_Member">CurrMember</string>
    <string name="title_activity_ftmaps">Map</string>

    <!-- Log Activity-->
    <string name="Log_Activity_Header">recent activity</string>
    <string name="title_activity_ftinstallation">FTInstallationActivity</string>
    <string name="radio_child">child</string>
    <string name="radio_parent">parent</string>
    <string name="installation_next">next</string>
    <string name="input_parent_number">Parent Phone</string>
    <string name="add_phone_text">Add</string>
    <string name="family_header">Add Family</string>
    <string name="Extras_Key_Is_First_Edit_Mode">IsFirstEdit</string>
    <string name="family_member_header">Family Member</string>
    <string name="Extras_Key_Family_Id">MemberFamilyId</string>
    <string name="installation_header">installation sequence</string>
    <string name="PARSE_PHONE_ID">DeviceNotificationId</string>
    <string name="Welcome_Families_List">families</string>
    <string name="Welcome_Add_Family">Add family</string>
    <string name="Welcome_Open_Log">To log</string>
    <string name="Welcome_Thanks_For_Installing">thank you for installing the application ,you may now exit the app</string>
    <string name="Welcome_No_Permissions">you have no viewing permissions,please exit the application</string>
    <string name="Extras_Key_Family">ChosenFamilyObject</string>
    <string name="leaving_page_saving_action_alert">leaving the page  saves all changes to current page</string>
    <string name="confirm_editable_activity_exit_title">Are you sure?</string>
    <string name="confirm_editable_activity_exit_message">Pressing ok will save all changes</string>
    <string name="save_confirmation_ok_text">ok</string>
    <string name="save_confirmation_cancel_text">cancel</string>
    <string name="family_activity_error_name_not_provided">you must input the family name to exit</string>
    <string name="confirm_editable_activity_exit_without_change_title">Are you sure you want to cancel?</string>
    <string name="confirm_editable_activity_exit_without_change_message">changes will not be saved,are you sure exit?</string>
    <string name="family_activity_must_provide_family_name">no family created yet,input family name to continue</string>
    <string name="Family_Locations_Family_Data">LocationsFamily</string>
    <string name="family_to_locs">\u00A0 \u00A0  Open \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0  Locations</string>


</resources>
