<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="il.ac.huji.familytracker.FTInstallationActivity">

    <LinearLayout android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="Phone number"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:id="@+id/phoneNumberEditText"
    />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="4">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authorizationRadioGrp">

        <RadioButton
            android:id="@+id/radioParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_parent"
            android:checked="true"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/radioChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_child"
            android:textSize="20dp"/>

    </RadioGroup>


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:id="@+id/passiveSection"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/input_parent_number"
                android:textSize="15dp"
            />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/parentPhoneEditText"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_phone_text"
                android:id="@+id/addPhoneBtn"/>
            </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:id="@+id/parentsListView"></ListView>


    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/nextBtn"
        android:text="@string/installation_next"
        android:textSize="20dp"

    />



</LinearLayout>
