<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FTWelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:text="@string/hello_world" />

    <LinearLayout
        android:id="@+id/lnrExistingFamiliesGroup"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TextView
            android:text="@string/Welcome_Families_List"
            android:id="@+id/tvFamiliesViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:textSize="20dp"/>

        <ListView
            android:id="@+id/lvFamilies"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"></ListView>

        <ImageButton
            android:text="@string/Welcome_Add_Family"
            android:src="@drawable/ic_add_family"
            android:background="#FFFFCC"
            android:id="@+id/btnAddFamily"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrShortLogViewGroup"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingTop="5dp">

        <ListView
            android:id="@+id/lvShortLogView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"></ListView>

        <FrameLayout

            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5">

            <ImageButton
                android:text="@string/Welcome_Open_Log"
                android:id="@+id/btnOpenLogActivity"
                android:src="@drawable/ic_log"
                android:background="#FFFFCC"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:clickable="false"
                    android:paddingLeft="25dp"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:text="View Log" >
                </TextView>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
