<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="il.ac.huji.familytracker.FTFamilyMemberActivity"
   >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:background="@color/wallet_holo_blue_light"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/family_member_header"
            android:textSize="25dp" />


        <Button
            android:id="@+id/btnConfirmMemberEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"

            android:background="@drawable/ic_left_arrow"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/Member_Activity_Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/hello_world"
            android:textSize="25dp"
    />

        <Button
            android:id="@+id/ContinueFromActivity"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text=""
            android:background="@drawable/ic_map"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8">
        <LinearLayout
            android:id="@+id/Name_Edit_Section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="300dp">

            <TextView
                android:id="@+id/Name_Label_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name_Label_Content"
                android:textSize="25dp"/>

            <EditText
            android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:text="default"
         />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Phone_Label_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Phone_Label_Content"
                android:textSize="25dp"/>

            <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:inputType="phone"
            android:text="default"
        />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Email_Label_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email_Label_Content"
                android:textSize="25dp"/>

            <EditText
           android:id="@+id/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="default"
        />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
