<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="il.ac.huji.familytracker.FTLocationActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#FFFFCC">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/ic_globe" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:textSize="25dp"
            android:text="@string/location_header"

            android:id="@+id/locationHeaderTxtView" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/ic_arrow_forwrd"
            android:id="@+id/okButton"
        />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="25dp"
            android:text="@string/location_name_text"

        />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:drawablePadding="1dp"
            android:id="@+id/locationNameEditText"
        />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/location_addr_text"
            android:textSize="25dp"
         />

        <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/autoCompleteTextView"
            android:layout_weight="10"
            android:ems="10">


         </AutoCompleteTextView>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="map"
            android:id="@+id/mapViewButton"
        />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers_text"
        android:paddingTop="20dp"
        android:textSize="20dp"
    />

    <ListView
        android:id="@+id/followersListView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5">

    </ListView>

    <ImageButton
        android:id="@+id/addFollowerBtn"
        android:src="@drawable/ic_add_family_member"
        android:background="#FFFFCC"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
     ></ImageButton>

</LinearLayout>

